# stonks

./: .flake8  .gitignore  README.md  pyproject.toml
.github/workflows/: deploy.yml  tests.yml
app/: __init__.py  bloomberg_rates.py  bot_app.py  cash_rates.py  currency.py  forex_rates.py  p2p_rates.py  rates_model.py  rates_update_task.py  settings.py  storage.py
app/bot_handlers/: __init__.py  common.py  convert.py  details.py  stonks.py  welcome.py
app/rate_providers/: __init__.py  bloomberg.py  cash.py  forex.py  moex.py  p2p.py
etc/: nginx-example.conf  supervisor-example.conf
tests/: conftest.py  test_rates_update_task.py
tests/bot_app/: conftest.py  test_handlers.py  test_main.py  test_save_stat.py
tests/bot_app/handlers/: test_convert_currency_handler.py  test_handlers.py
tests/rates_update_task/: test_get_bloomberg_rates.py  test_get_cash_rates.py  test_get_forex_rates.py  test_get_moex_rates.py  test_get_p2p_rates.py  test_main.py  test_parse_ligovka_rate.py  test_save_rates.py
tests/storage/: test_inc_stats.py  test_save_rates.py
