[tool.poetry]
name = "stonks"
version = "0.1.0"
description = ""
authors = ["Simon <spam@esemi.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
httpx = "^0.22.0"
lxml = "^4.8.0"
cssselect = "^1.1.0"
aioredis = {extras = ["hiredis"], version = "^2.0.1"}
aiogram = "^2.20"
uvloop = "^0.16.0"
ujson = "^5.3.0"
aiohttp = {extras = ["speedups"], version = "^3.8.1"}
prettytable = "^3.3.0"

[tool.poetry.dev-dependencies]
mypy = "^0.950"
wemake-python-styleguide = "^0.16.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-asyncio = "^0.18.3"
respx = "^0.19.2"
pytest-mock = "^3.7.0"
types-requests = "^2.28.11"

[tool.mypy]
python_version = 3.9
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
